--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.8.3",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
